--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -14,6 +14,8 @@
     }
    ],
    "source": [
+    "#This notebook aims for the IBM Data Science specialization course.\n",
+    "\n",
     "import numpy as np  # useful for many scientific computing in Python\n",
     "import pandas as pd # primary data structure library\n",
     "\n",
