--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook aims for the IBM Data Science specialization course."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -14,8 +23,6 @@
     }
    ],
    "source": [
-    "#This notebook aims for the IBM Data Science specialization course.\n",
-    "\n",
     "import numpy as np  # useful for many scientific computing in Python\n",
     "import pandas as pd # primary data structure library\n",
     "\n",
